2008-11-18  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/IO.ml: [in_channel_of_input] created

	* src/core/extlib/file.ml: [out_chan_mode], [in_chan_mode] created

	* src/core/extlib/file.ml*: [open_temporary_out_flag], [open_temporary_out], [with_temporary_out] created

	* src/core/extlib/extPervasives.ml*: redefined [first], [second]

2008-11-17  Edgar Friendly  <thelema314@gmail.com>

	* src/core/extlib/interfaces.ml (et al): Add Data.Interfaces as the place to put module types / interfaces (i.e. OrderedType)

2008-11-16  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extBigarray.ml*: created

	* src/main/nothreads/batteries.mllib: [HashtblLabels] removed

	* src/main/nothreads/batteries.ml: [MoreLabels] added, [HashtblLabels] removed
	
	* src/main/threads/batteries.ml: [MoreLabels] added, [HashtblLabels] removed

	* src/main/threads/batteries.mllib: [HashtblLabels] removed

	* src/core/batteries_core_threads.ml: [HashtblLabels] removed

	* src/core/batteries_core.ml: [HashtblLabels] removed

	* src/core/extlib/extHashtbl.ml*: [map] now passes to [f] both the value and the key

	* src/core/batteries_core_threads.ml: removed [SetLabels]

	* src/main/threads/batteries.ml: removed [SetLabels]

	* src/core/extlib/extSet.mli: [Labels], [ExceptionLess] added

	* src/core/extlib/extArray.ml*: [Cap.Labels] added

2008-11-15  David Teller  <David.Teller@univ-orleans.fr>

	* Makefile.in: [reinstall] now builds [top], [syntax]
	
	* src/core/extlib.mlpack: [EnumLabels] removed

	* src/core/batteries_core.ml: [ArrayLabels] removed

	* src/core/extlib/extArray.ml: module [Labels] added

	* src/core/extlib/extArray.ml*: [filter_map] added

	* src/core/extlib/extArray.ml*: module [ExceptionLess] added

	* src/core/extlib/extArray.ml*: [iter2i] added

	* src/core/extlib/enum.ml: module [Labels] added

	* src/core/extlib/enumLabels.ml*: removed
